# RecoveryTBot

./: .replit  INSTALL_WINDOWS.md  README.md  basic_fallback_results.json  campaign_monitor.py  campaign_monitor_README.md  company_fallback_mapping.json  company_urls_test_results.json  config.txt  config.txt.example  dashboard.py  details_page_simple.html  document_extraction_test_results.json  document_scraper_improvements.md  en_page.html  en_scripts.js  extract_from_raw_html.py  failed_companies_list.md  final_company_results.json  fix_company_urls.py  fix_documents_cache.py  install.bat  install_no_git.bat  investing_original.html  investing_page.html  investing_scripts.js  investing_test_page.html  key_companies_results.json  lending-companies_original.html  lending-companies_test_page.html  lending_companies.html  loan-originators_page.html  loan-originators_scripts.js  main.py  pyproject.toml  replit.nix  run.py  service_manager.py  simple_install.py  simple_test_results.json  (+45 more)
.streamlit/: config.toml
attached_assets/: Lending companies _ Mintos.html  Pasted-Alexcredit-https-www-mintos-com-en-lending-companies-Alexcredit-Alivio-https-www-mintos-c-1741107186233.txt  Pasted-D-python-mintos-install-bat-Mintos-Telegram-Bot-Installer-Python-f-1748544144455.txt  Pasted-D-python-mintos-install-bat-Mintos-Telegram-Bot-Installer-Python-f-1748544583085.txt  Pasted-D-python-mintos-install-bat-Mintos-Telegram-Bot-Installer-Python-f-1748544927385.txt  Pasted-ERROR-Ignored-the-following-versions-that-require-a-different-python-version-0-55-2-Requires-Pytho-1748544438604.txt  company_pages.csv  lo_names.csv
bot/: async_document_scraper.py  async_document_scraper.py.new  config.py  constants.py  data_manager.py  document_parser.py  document_scraper.py  document_scraper.py.new  fetch_company_urls_simplified.py  logger.py  mintos_client.py  rss_reader.py  telegram_bot.py  url_fetcher.py  user_manager.py  utils.py
data/: campaigns.json  campaigns_cache.json  company_mapping.json  company_urls_cache.json  company_urls_manual.json  document_extraction_results.json  documents_cache.json  documents_cache_backup.json  notification_preferences.json  pending_campaigns.json  recovery_updates.json  rss_keywords.txt  rss_last_check.json  rss_sent_items.json  rss_user_preferences.json  sent_campaigns.json  sent_campaigns.json.bak  sent_documents.json  sent_documents.json.bak  sent_updates.json  sent_updates.json.bak  (+4 more)
(+15 files in other folders)
