[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "beautifulsoup4>=4.13.3",
    "pandas>=2.2.3",
    "psutil>=6.1.1",
    "python-telegram-bot[job-queue]==20.7",
    "streamlit>=1.41.1",
    "twilio>=9.4.4",
    "watchdog>=6.0.0",
]
