[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mintos-telegram-bot"
version = "1.0.0"
description = "A sophisticated Telegram bot and dashboard for monitoring Mintos lending platform investments"
requires-python = ">=3.9"
authors = [
    {name = "Mintos Bot Developer", email = "developer@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["telegram", "bot", "mintos", "investment", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "feedparser>=6.0.8",
    "pandas>=1.5.0",
    "psutil>=5.9.0",
    "python-telegram-bot[job-queue]==20.7",
    "streamlit>=0.84.0",
    "trafilatura>=1.6.0",
    "twilio>=8.5.0",
    "watchdog>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/Folky83/RecoveryTBot"
Repository = "https://github.com/Folky83/RecoveryTBot"
Issues = "https://github.com/Folky83/RecoveryTBot/issues"

[project.scripts]
mintos-bot = "mintos_bot.run:main"
mintos-bot-dashboard = "mintos_bot.main:main"

[tool.setuptools]
packages = ["mintos_bot"]

[tool.setuptools.package-data]
mintos_bot = ["*.md", "*.txt", "*.json"]
